fixed base css
totally messed up a width

--- a/css/index.css
+++ b/css/index.css
@@ -83,8 +83,9 @@ h1, h2, h3, h4, h5 {
 /* Your code starts here! |||||||||||||||||||||||||||||||||||||||||| */
 
 .container {
-	max-width: ;width: 880px;
-	margin: 0 auto;
+	max-width: 880px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
 p {
